# Yukon

./: CMakeLists.txt  README.md  deck.c  deck.h  linkedlist.c  linkedlist.h  main.c  view.c  view.h
Resources/: deck.txt
diagrams/: ld_activity.puml  linked_insert_activity.puml  sr_activity.puml
src/: commands.c  commands.h  deck.c  deck.h  linkedlist.c  linkedlist.h  main.c  view.c  view.h
test/: main_test.c
